--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,37 +1,71 @@
 {% extends 'base.html' %}
+{% block title %}
+Registration
+{% endblock %}
 {% block content %}
+<img class="ml-5 mt-3" src="../static/assets/singlekey_logo.png" height="50px"></img>
+<button type="button" class="btn btn-outline-primary float-right mr-5 mt-3" style="width: 13em;margin-top:1%;">Log In</button>
+<hr/>
 <div class='container mt-5'>
   <form method='POST'>
-    <div class='text-center'>
-      <h1>SingleKey</h1>
+    <div class='text-left'>
+      <h2>Submit Information</h2>
     </div>
-    <div class='row mt-3'>
-      <div class='col'>
-        <label>Name</label><br>
-        <input name='name'>
+    <div class='mt-3'>
+      <div>
+        <label><b>Applicant Name</b></label><br>
+        <input name='name' placeholder="Applicant Name" class="w-100 py-2 px-2">
       </div>
-      <div class='col'>
-        <label>Email</label><br>
-        <input name='email'>
+      <div class="mt-3">
+        <label><b>Email Address</b></label><br>
+        <input name='email' placeholder="Email Address" class="w-100 py-2 px-2">
       </div>
     </div>
     <br>
     <br>
     {% csrf_token %}
-    <div class='text-center'>
-      <button type='supmit' class='btn btn-primary'>Submit</button>
+    <div class='text-left'>
+      <button type='supmit' class='btn btn-secondary mr-lg-3 mb-lg-0 mb-4' style="width: 13em;margin-top:1%;">Submit</button>
     </div>
   </form>
+  <hr/>
   {% if results %}
-  <div class='w-100 text-center mt-5'>
-    <h3>Previous submissions</h3>
-      {% for i in results %}
-        <div class='text-left mb-3 p-4 card'>
-          <b>{{ i.name }}</b><br>
-          <b>{{ i.email }}</b>
-        </div>
-      {% endfor %}
+  <div class='w-100 text-left mt-5'>
+    <h3>Submissions</h3>
+    <table class="table shadow p-3 mb-5 bg-body rounded">
+      <thead>
+        <tr>
+          <th>Applicant</th>
+          <th>Email</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for i in results %}
+        <tr>
+          <td>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="navy" class="bi bi-person-circle" viewBox="0 0 16 16">
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+          </svg>
+          <b>{{ i.name }}</b>
+        </td>
+        <td>
+          {{ i.email }}
+        </td>
+        <td>
+          Submitted
+        </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
     {% endif %}
   </div>
 </div>
+<footer class="footer mt-auto py-3">
+  <div class="container">
+    &copy All rights reserved SingleKey 2021
+  </div>
+</footer>
 {% endblock %}
