--- a/main/templates/thanks.html
+++ b/main/templates/thanks.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Thank You
+{% endblock %}
 {% load static %}
 {% block content %}
 <div class='form-container mt-5'>
