Add mobile responsive styling/flexbox

--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -5,7 +5,7 @@
 }
 * {
   font-family: "Roboto", sans-serif;
-  color: #595d64;
+  color: #2b2e33;
   font-weight: 300;
 }
 body {
@@ -142,12 +142,20 @@ select {
 .card {
   margin-top: 8em;
   margin: 0 auto;
-  min-width: 23em;
-  max-width: 23em;
-  border-radius: 3px;
-  box-shadow: 0 1px 3px 0 rgba(63, 63, 68, 0.15),
-    0 0 0 1px rgba(63, 63, 68, 0.05);
-  background-color: #ffffff;
+  /* min-width: 23em;
+  max-width: 23em; */
+  border: none;
+  /* border-radius: 3px; */
+  /* box-shadow: 0 1px 3px 0 rgba(63, 63, 68, 0.15),
+    0 0 0 1px rgba(63, 63, 68, 0.05); */
+}
+.summaryCard h3,
+.summaryCard p,
+.summaryCard button {
+  color: white;
+}
+.summaryCard {
+  background-image: linear-gradient(to right, #4e4272, #2793d3);
 }
 .docs-card {
   border: 1px solid rgba(0, 0, 0, 0.125);
@@ -561,7 +569,7 @@ select {
   color: white;
 }
 .footer {
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   left: 0;
   width: 100%;
@@ -786,6 +794,36 @@ b {
 .rg-buffer {
   height: 6px;
 }
+
+/* .summaryCard,
+.rentCard {
+  width: 300px;
+  margin-left: auto;
+} */
+
+.indexContent {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.indexForm {
+  flex: 75%;
+}
+.summaryCard {
+  flex: 25%;
+  height: fit-content;
+  margin-top: 100px;
+}
+.indexSubmissions {
+  flex: 75%;
+}
+.rentCard {
+  flex: 25%;
+  height: fit-content;
+  margin-bottom: 100px;
+  box-shadow: 0 1px 3px 0 rgba(63, 63, 68, 0.15),
+    0 0 0 1px rgba(63, 63, 68, 0.05);
+}
 /* -----Adjustments for mobile screens----- */
 @media only screen and (max-height: 820px) {
   .sk-sticky {
@@ -827,6 +865,25 @@ b {
   }
   .sk-reference {
     margin-left: 0;
+  }
+
+  .indexContent {
+    display: flex;
+    flex-direction: column;
+  }
+  .indexForm {
+    order: 2;
+  }
+  .summaryCard {
+    margin-top: 0;
+    order: 1;
+  }
+  .indexSubmissions {
+    order: 3;
+  }
+  .rentCard {
+    margin-bottom: 0;
+    order: 4;
   }
 }
 .switch {
