Implement data persist and email checking

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -41,7 +41,7 @@ Registration
     <h3>Submissions</h3>
     <table class="table shadow p-3 mb-5 bg-body rounded">
       <thead>
-        <tr class="d-none d-sm-table-row">
+        <tr class="d-none d-md-table-row">
           <th>Applicant</th>
           <th>Email</th>
           <th>Status</th>
