Implement submission time save

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -61,7 +61,7 @@ Registration
           {{ i.email }}
         </td>
         <td>
-          Submitted
+          Submitted {{ i.submission_time }}
         </td>
         </tr>
         {% endfor %}
